--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="portofolio-box">
           <img src="img/satu.jpg" alt="project1" />
           <div class="portofolio-layer">
+            <a href="https://github.com/gungtriartha/mobile"></a>
             <h4>Android Studio(APP Admin)</h4>
             <br />
             <p>
@@ -94,6 +95,7 @@
         <div class="portofolio-box">
           <img src="img/tiga.png" alt="project1" />
           <div class="portofolio-layer">
+            <a href="http://gungtriartha.github.io/preweding/"></a>
             <h4>Blog Website wedding</h4>
             <br />
             <p>
